More html to topics 2.0

--- a/tidder-front/src/main/resources/templates/topic.html
+++ b/tidder-front/src/main/resources/templates/topic.html
@@ -25,112 +25,130 @@
     <div class="row">
         <div id="postContainer" class="col-lg-9 col-md-8">
 
-            <div class="row my-1  post">
-                <div class="">
-                    <span class="font-weigth-lighter">2 hours ago | by <a href="/u/sagen">sagen</a> | <a href="/t/idiotsfightstuff">/t/idiotsfightstuff</a></span>
+            <div class="row my-1 px-0 post d-flex">
+                <div class="mx-0 pl-1 px-0 text-center" style="width: 40px;">
+                    <span class="font-weight-bold" style="color: green;">105</span>
+                    <hr class="my-1" style="border-color: #666;">
+                    <span class="font-weight-bold" style="color: red;">12</span>
+                </div>
+                <div class="flex-grow-1 mx-0 px-2">
+                    <span class="font-weight-light">2 hours ago | by <a href="/u/sagen">sagen</a> | <a href="/t/idiotsfightstuff">/t/idiotsfightstuff</a></span>
                     <hr class="my-1" style="border-color: #666;">
                     <span class="font-weight-bold">Stupid people fight trashcan</span>
                 </div>
             </div>
 
-            <div class="row my-1  post">
-                <div class="">
+            <div class="row my-1 px-0 post d-flex">
+                <div class="mx-0 pl-1 px-0 text-center" style="width: 40px;">
+                    <span class="font-weight-bold" style="color: green;">105</span>
+                    <hr class="my-1" style="border-color: #666;">
+                    <span class="font-weight-bold" style="color: red;">12</span>
+                </div>
+                <div class="flex-grow-1 mx-0 px-2">
                     <span class="font-weigth-lighter">2 hours ago | by <a href="/u/fighter0987">fighter0987</a> | <a href="/t/technology">/t/technology</a></span>
                     <hr class="my-1" style="border-color: #666;">
                     <span class="font-weight-bold">Robots can now outrun even the fastest athletes</span>
                 </div>
             </div>
 
-            <div class="row my-1  post">
-                <div class="">
-                    <span class="font-weigth-lighter">2 hours ago | by <a href="/u/sagen">sagen</a> | <a href="/t/idiotsfightstuff">/t/idiotsfightstuff</a></span>
+            <div class="row my-1 px-0 post d-flex">
+                <div class="mx-0 pl-1 px-0 text-center" style="width: 40px;">
+                    <span class="font-weight-bold" style="color: green;">105</span>
+                    <hr class="my-1" style="border-color: #666;">
+                    <span class="font-weight-bold" style="color: red;">12</span>
+                </div>
+                <div class="flex-grow-1 mx-0 px-2">
+                    <span class="font-weight-light">2 hours ago | by <a href="/u/sagen">sagen</a> | <a href="/t/idiotsfightstuff">/t/idiotsfightstuff</a></span>
                     <hr class="my-1" style="border-color: #666;">
                     <span class="font-weight-bold">Stupid people fight trashcan</span>
                 </div>
             </div>
 
-            <div class="row my-1  post">
-                <div class="">
+            <div class="row my-1 px-0 post d-flex">
+                <div class="mx-0 pl-1 px-0 text-center" style="width: 40px;">
+                    <span class="font-weight-bold" style="color: green;">105</span>
+                    <hr class="my-1" style="border-color: #666;">
+                    <span class="font-weight-bold" style="color: red;">12</span>
+                </div>
+                <div class="flex-grow-1 mx-0 px-2">
                     <span class="font-weigth-lighter">2 hours ago | by <a href="/u/fighter0987">fighter0987</a> | <a href="/t/technology">/t/technology</a></span>
                     <hr class="my-1" style="border-color: #666;">
                     <span class="font-weight-bold">Robots can now outrun even the fastest athletes</span>
                 </div>
             </div>
 
-            <div class="row my-1  post">
-                <div class="">
-                    <span class="font-weigth-lighter">2 hours ago | by <a href="/u/sagen">sagen</a> | <a href="/t/idiotsfightstuff">/t/idiotsfightstuff</a></span>
+            <div class="row my-1 px-0 post d-flex">
+                <div class="mx-0 pl-1 px-0 text-center" style="width: 40px;">
+                    <span class="font-weight-bold" style="color: green;">105</span>
+                    <hr class="my-1" style="border-color: #666;">
+                    <span class="font-weight-bold" style="color: red;">12</span>
+                </div>
+                <div class="flex-grow-1 mx-0 px-2">
+                    <span class="font-weight-light">2 hours ago | by <a href="/u/sagen">sagen</a> | <a href="/t/idiotsfightstuff">/t/idiotsfightstuff</a></span>
                     <hr class="my-1" style="border-color: #666;">
                     <span class="font-weight-bold">Stupid people fight trashcan</span>
                 </div>
             </div>
 
-            <div class="row my-1  post">
-                <div class="">
+            <div class="row my-1 px-0 post d-flex">
+                <div class="mx-0 pl-1 px-0 text-center" style="width: 40px;">
+                    <span class="font-weight-bold" style="color: green;">105</span>
+                    <hr class="my-1" style="border-color: #666;">
+                    <span class="font-weight-bold" style="color: red;">12</span>
+                </div>
+                <div class="flex-grow-1 mx-0 px-2">
                     <span class="font-weigth-lighter">2 hours ago | by <a href="/u/fighter0987">fighter0987</a> | <a href="/t/technology">/t/technology</a></span>
                     <hr class="my-1" style="border-color: #666;">
                     <span class="font-weight-bold">Robots can now outrun even the fastest athletes</span>
                 </div>
             </div>
 
-            <div class="row my-1  post">
-                <div class="">
-                    <span class="font-weigth-lighter">2 hours ago | by <a href="/u/sagen">sagen</a> | <a href="/t/idiotsfightstuff">/t/idiotsfightstuff</a></span>
+            <div class="row my-1 px-0 post d-flex">
+                <div class="mx-0 pl-1 px-0 text-center" style="width: 40px;">
+                    <span class="font-weight-bold" style="color: green;">105</span>
+                    <hr class="my-1" style="border-color: #666;">
+                    <span class="font-weight-bold" style="color: red;">12</span>
+                </div>
+                <div class="flex-grow-1 mx-0 px-2">
+                    <span class="font-weight-light">2 hours ago | by <a href="/u/sagen">sagen</a> | <a href="/t/idiotsfightstuff">/t/idiotsfightstuff</a></span>
                     <hr class="my-1" style="border-color: #666;">
                     <span class="font-weight-bold">Stupid people fight trashcan</span>
                 </div>
             </div>
 
-            <div class="row my-1  post">
-                <div class="">
+            <div class="row my-1 px-0 post d-flex">
+                <div class="mx-0 pl-1 px-0 text-center" style="width: 40px;">
+                    <span class="font-weight-bold" style="color: green;">105</span>
+                    <hr class="my-1" style="border-color: #666;">
+                    <span class="font-weight-bold" style="color: red;">12</span>
+                </div>
+                <div class="flex-grow-1 mx-0 px-2">
                     <span class="font-weigth-lighter">2 hours ago | by <a href="/u/fighter0987">fighter0987</a> | <a href="/t/technology">/t/technology</a></span>
                     <hr class="my-1" style="border-color: #666;">
                     <span class="font-weight-bold">Robots can now outrun even the fastest athletes</span>
                 </div>
             </div>
 
-            <div class="row my-1  post">
-                <div class="">
-                    <span class="font-weigth-lighter">2 hours ago | by <a href="/u/sagen">sagen</a> | <a href="/t/idiotsfightstuff">/t/idiotsfightstuff</a></span>
+            <div class="row my-1 px-0 post d-flex">
+                <div class="mx-0 pl-1 px-0 text-center" style="width: 40px;">
+                    <span class="font-weight-bold" style="color: green;">105</span>
+                    <hr class="my-1" style="border-color: #666;">
+                    <span class="font-weight-bold" style="color: red;">12</span>
+                </div>
+                <div class="flex-grow-1 mx-0 px-2">
+                    <span class="font-weight-light">2 hours ago | by <a href="/u/sagen">sagen</a> | <a href="/t/idiotsfightstuff">/t/idiotsfightstuff</a></span>
                     <hr class="my-1" style="border-color: #666;">
                     <span class="font-weight-bold">Stupid people fight trashcan</span>
                 </div>
             </div>
 
-            <div class="row my-1  post">
-                <div class="">
-                    <span class="font-weigth-lighter">2 hours ago | by <a href="/u/fighter0987">fighter0987</a> | <a href="/t/technology">/t/technology</a></span>
+            <div class="row my-1 px-0 post d-flex">
+                <div class="mx-0 pl-1 px-0 text-center" style="width: 40px;">
+                    <span class="font-weight-bold" style="color: green;">105</span>
                     <hr class="my-1" style="border-color: #666;">
-                    <span class="font-weight-bold">Robots can now outrun even the fastest athletes</span>
+                    <span class="font-weight-bold" style="color: red;">12</span>
                 </div>
-            </div>
-
-            <div class="row my-1  post">
-                <div class="">
-                    <span class="font-weigth-lighter">2 hours ago | by <a href="/u/sagen">sagen</a> | <a href="/t/idiotsfightstuff">/t/idiotsfightstuff</a></span>
-                    <hr class="my-1" style="border-color: #666;">
-                    <span class="font-weight-bold">Stupid people fight trashcan</span>
-                </div>
-            </div>
-
-            <div class="row my-1  post">
-                <div class="">
-                    <span class="font-weigth-lighter">2 hours ago | by <a href="/u/fighter0987">fighter0987</a> | <a href="/t/technology">/t/technology</a></span>
-                    <hr class="my-1" style="border-color: #666;">
-                    <span class="font-weight-bold">Robots can now outrun even the fastest athletes</span>
-                </div>
-            </div>
-
-            <div class="row my-1  post">
-                <div class="">
-                    <span class="font-weigth-lighter">2 hours ago | by <a href="/u/sagen">sagen</a> | <a href="/t/idiotsfightstuff">/t/idiotsfightstuff</a></span>
-                    <hr class="my-1" style="border-color: #666;">
-                    <span class="font-weight-bold">Stupid people fight trashcan</span>
-                </div>
-            </div>
-
-            <div class="row my-1  post">
-                <div class="">
+                <div class="flex-grow-1 mx-0 px-2">
                     <span class="font-weigth-lighter">2 hours ago | by <a href="/u/fighter0987">fighter0987</a> | <a href="/t/technology">/t/technology</a></span>
                     <hr class="my-1" style="border-color: #666;">
                     <span class="font-weight-bold">Robots can now outrun even the fastest athletes</span>
