--- a/tidder-front/src/main/resources/templates/topic.html
+++ b/tidder-front/src/main/resources/templates/topic.html
@@ -20,138 +20,203 @@
     </div>
 </header>
 
+<!-- Header -->
+<header class="masthead">
+    <div class="container">
+        <div class="intro-text py-5">
+            <div class="intro-heading pt-5">/t/<span>all</span></div>
+            <div class="intro-lead-in">Collection of the best posts from all categories</div>
+        </div>
+    </div>
+</header>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
 <!-- Posts -->
 <section id="postSection" class="container my-0 py-0 mt-3">
     <div class="row">
         <div id="postContainer" class="col-lg-9 col-md-8">
 
-            <div class="row my-1 px-0 post d-flex">
+            <div class="row my-1 px-0 post d-flex flex-nowrap">
                 <div class="mx-0 pl-1 px-0 text-center" style="width: 40px;">
-                    <span class="font-weight-bold" style="color: green;">105</span>
+                    <span class="font-weight-bold" style="color: green;">198</span>
                     <hr class="my-1" style="border-color: #666;">
                     <span class="font-weight-bold" style="color: red;">12</span>
                 </div>
                 <div class="flex-grow-1 mx-0 px-2">
-                    <span class="font-weight-light">2 hours ago | by <a href="/u/sagen">sagen</a> | <a href="/t/idiotsfightstuff">/t/idiotsfightstuff</a></span>
+                    <span class="font-weight-light text-truncate">2 hours ago | by <a href="/u/sagen">sagen</a> | <a href="/t/idiotsfightstuff">/t/idiotsfightstuff</a></span>
                     <hr class="my-1" style="border-color: #666;">
-                    <span class="font-weight-bold">Stupid people fight trashcan</span>
+                    <span class="font-weight-bold text-truncate">Stupid people fight trashcan</span>
                 </div>
             </div>
 
-            <div class="row my-1 px-0 post d-flex">
+            <div class="row my-1 px-0 post d-flex flex-nowrap">
                 <div class="mx-0 pl-1 px-0 text-center" style="width: 40px;">
-                    <span class="font-weight-bold" style="color: green;">105</span>
+                    <span class="font-weight-bold" style="color: green;">234</span>
                     <hr class="my-1" style="border-color: #666;">
-                    <span class="font-weight-bold" style="color: red;">12</span>
+                    <span class="font-weight-bold" style="color: red;">96</span>
                 </div>
                 <div class="flex-grow-1 mx-0 px-2">
-                    <span class="font-weigth-lighter">2 hours ago | by <a href="/u/fighter0987">fighter0987</a> | <a href="/t/technology">/t/technology</a></span>
+                    <span class="font-weight-light text-truncate">2 hours ago | by <a href="/u/fighter0987">fighter0987</a> | <a href="/t/technology">/t/technology</a></span>
                     <hr class="my-1" style="border-color: #666;">
-                    <span class="font-weight-bold">Robots can now outrun even the fastest athletes</span>
+                    <span class="font-weight-bold text-truncate">Robots can now outrun even the fastest athletes</span>
                 </div>
             </div>
 
-            <div class="row my-1 px-0 post d-flex">
+            <div class="row my-1 px-0 post d-flex flex-nowrap">
                 <div class="mx-0 pl-1 px-0 text-center" style="width: 40px;">
-                    <span class="font-weight-bold" style="color: green;">105</span>
+                    <span class="font-weight-bold" style="color: green;">198</span>
                     <hr class="my-1" style="border-color: #666;">
                     <span class="font-weight-bold" style="color: red;">12</span>
                 </div>
                 <div class="flex-grow-1 mx-0 px-2">
-                    <span class="font-weight-light">2 hours ago | by <a href="/u/sagen">sagen</a> | <a href="/t/idiotsfightstuff">/t/idiotsfightstuff</a></span>
+                    <span class="font-weight-light text-truncate">2 hours ago | by <a href="/u/sagen">sagen</a> | <a href="/t/idiotsfightstuff">/t/idiotsfightstuff</a></span>
                     <hr class="my-1" style="border-color: #666;">
-                    <span class="font-weight-bold">Stupid people fight trashcan</span>
+                    <span class="font-weight-bold text-truncate">Stupid people fight trashcan</span>
                 </div>
             </div>
 
-            <div class="row my-1 px-0 post d-flex">
+            <div class="row my-1 px-0 post d-flex flex-nowrap">
                 <div class="mx-0 pl-1 px-0 text-center" style="width: 40px;">
-                    <span class="font-weight-bold" style="color: green;">105</span>
+                    <span class="font-weight-bold" style="color: green;">234</span>
                     <hr class="my-1" style="border-color: #666;">
-                    <span class="font-weight-bold" style="color: red;">12</span>
+                    <span class="font-weight-bold" style="color: red;">96</span>
                 </div>
                 <div class="flex-grow-1 mx-0 px-2">
-                    <span class="font-weigth-lighter">2 hours ago | by <a href="/u/fighter0987">fighter0987</a> | <a href="/t/technology">/t/technology</a></span>
+                    <span class="font-weight-light text-truncate">2 hours ago | by <a href="/u/fighter0987">fighter0987</a> | <a href="/t/technology">/t/technology</a></span>
                     <hr class="my-1" style="border-color: #666;">
-                    <span class="font-weight-bold">Robots can now outrun even the fastest athletes</span>
+                    <span class="font-weight-bold text-truncate">Robots can now outrun even the fastest athletes</span>
                 </div>
             </div>
 
-            <div class="row my-1 px-0 post d-flex">
+            <div class="row my-1 px-0 post d-flex flex-nowrap">
                 <div class="mx-0 pl-1 px-0 text-center" style="width: 40px;">
-                    <span class="font-weight-bold" style="color: green;">105</span>
+                    <span class="font-weight-bold" style="color: green;">198</span>
                     <hr class="my-1" style="border-color: #666;">
                     <span class="font-weight-bold" style="color: red;">12</span>
                 </div>
                 <div class="flex-grow-1 mx-0 px-2">
-                    <span class="font-weight-light">2 hours ago | by <a href="/u/sagen">sagen</a> | <a href="/t/idiotsfightstuff">/t/idiotsfightstuff</a></span>
+                    <span class="font-weight-light text-truncate">2 hours ago | by <a href="/u/sagen">sagen</a> | <a href="/t/idiotsfightstuff">/t/idiotsfightstuff</a></span>
                     <hr class="my-1" style="border-color: #666;">
-                    <span class="font-weight-bold">Stupid people fight trashcan</span>
+                    <span class="font-weight-bold text-truncate">Stupid people fight trashcan</span>
                 </div>
             </div>
 
-            <div class="row my-1 px-0 post d-flex">
+            <div class="row my-1 px-0 post d-flex flex-nowrap">
                 <div class="mx-0 pl-1 px-0 text-center" style="width: 40px;">
-                    <span class="font-weight-bold" style="color: green;">105</span>
+                    <span class="font-weight-bold" style="color: green;">234</span>
                     <hr class="my-1" style="border-color: #666;">
-                    <span class="font-weight-bold" style="color: red;">12</span>
+                    <span class="font-weight-bold" style="color: red;">96</span>
                 </div>
                 <div class="flex-grow-1 mx-0 px-2">
-                    <span class="font-weigth-lighter">2 hours ago | by <a href="/u/fighter0987">fighter0987</a> | <a href="/t/technology">/t/technology</a></span>
+                    <span class="font-weight-light text-truncate">2 hours ago | by <a href="/u/fighter0987">fighter0987</a> | <a href="/t/technology">/t/technology</a></span>
                     <hr class="my-1" style="border-color: #666;">
-                    <span class="font-weight-bold">Robots can now outrun even the fastest athletes</span>
+                    <span class="font-weight-bold text-truncate">Robots can now outrun even the fastest athletes</span>
                 </div>
             </div>
 
-            <div class="row my-1 px-0 post d-flex">
+            <div class="row my-1 px-0 post d-flex flex-nowrap">
                 <div class="mx-0 pl-1 px-0 text-center" style="width: 40px;">
-                    <span class="font-weight-bold" style="color: green;">105</span>
+                    <span class="font-weight-bold" style="color: green;">198</span>
                     <hr class="my-1" style="border-color: #666;">
                     <span class="font-weight-bold" style="color: red;">12</span>
                 </div>
                 <div class="flex-grow-1 mx-0 px-2">
-                    <span class="font-weight-light">2 hours ago | by <a href="/u/sagen">sagen</a> | <a href="/t/idiotsfightstuff">/t/idiotsfightstuff</a></span>
+                    <span class="font-weight-light text-truncate">2 hours ago | by <a href="/u/sagen">sagen</a> | <a href="/t/idiotsfightstuff">/t/idiotsfightstuff</a></span>
                     <hr class="my-1" style="border-color: #666;">
-                    <span class="font-weight-bold">Stupid people fight trashcan</span>
+                    <span class="font-weight-bold text-truncate">Stupid people fight trashcan</span>
                 </div>
             </div>
 
-            <div class="row my-1 px-0 post d-flex">
+            <div class="row my-1 px-0 post d-flex flex-nowrap">
                 <div class="mx-0 pl-1 px-0 text-center" style="width: 40px;">
-                    <span class="font-weight-bold" style="color: green;">105</span>
+                    <span class="font-weight-bold" style="color: green;">234</span>
                     <hr class="my-1" style="border-color: #666;">
-                    <span class="font-weight-bold" style="color: red;">12</span>
+                    <span class="font-weight-bold" style="color: red;">96</span>
                 </div>
                 <div class="flex-grow-1 mx-0 px-2">
-                    <span class="font-weigth-lighter">2 hours ago | by <a href="/u/fighter0987">fighter0987</a> | <a href="/t/technology">/t/technology</a></span>
+                    <span class="font-weight-light text-truncate">2 hours ago | by <a href="/u/fighter0987">fighter0987</a> | <a href="/t/technology">/t/technology</a></span>
                     <hr class="my-1" style="border-color: #666;">
-                    <span class="font-weight-bold">Robots can now outrun even the fastest athletes</span>
+                    <span class="font-weight-bold text-truncate">Robots can now outrun even the fastest athletes</span>
                 </div>
             </div>
 
-            <div class="row my-1 px-0 post d-flex">
+            <div class="row my-1 px-0 post d-flex flex-nowrap">
                 <div class="mx-0 pl-1 px-0 text-center" style="width: 40px;">
-                    <span class="font-weight-bold" style="color: green;">105</span>
+                    <span class="font-weight-bold" style="color: green;">198</span>
                     <hr class="my-1" style="border-color: #666;">
                     <span class="font-weight-bold" style="color: red;">12</span>
                 </div>
                 <div class="flex-grow-1 mx-0 px-2">
-                    <span class="font-weight-light">2 hours ago | by <a href="/u/sagen">sagen</a> | <a href="/t/idiotsfightstuff">/t/idiotsfightstuff</a></span>
+                    <span class="font-weight-light text-truncate">2 hours ago | by <a href="/u/sagen">sagen</a> | <a href="/t/idiotsfightstuff">/t/idiotsfightstuff</a></span>
                     <hr class="my-1" style="border-color: #666;">
-                    <span class="font-weight-bold">Stupid people fight trashcan</span>
+                    <span class="font-weight-bold text-truncate">Stupid people fight trashcan</span>
                 </div>
             </div>
 
-            <div class="row my-1 px-0 post d-flex">
+            <div class="row my-1 px-0 post d-flex flex-nowrap">
                 <div class="mx-0 pl-1 px-0 text-center" style="width: 40px;">
-                    <span class="font-weight-bold" style="color: green;">105</span>
+                    <span class="font-weight-bold" style="color: green;">234</span>
+                    <hr class="my-1" style="border-color: #666;">
+                    <span class="font-weight-bold" style="color: red;">96</span>
+                </div>
+                <div class="flex-grow-1 mx-0 px-2">
+                    <span class="font-weight-light text-truncate">2 hours ago | by <a href="/u/fighter0987">fighter0987</a> | <a href="/t/technology">/t/technology</a></span>
+                    <hr class="my-1" style="border-color: #666;">
+                    <span class="font-weight-bold text-truncate">Robots can now outrun even the fastest athletes</span>
+                </div>
+            </div>
+
+            <div class="row my-1 px-0 post d-flex flex-nowrap">
+                <div class="mx-0 pl-1 px-0 text-center" style="width: 40px;">
+                    <span class="font-weight-bold" style="color: green;">198</span>
                     <hr class="my-1" style="border-color: #666;">
                     <span class="font-weight-bold" style="color: red;">12</span>
                 </div>
                 <div class="flex-grow-1 mx-0 px-2">
-                    <span class="font-weigth-lighter">2 hours ago | by <a href="/u/fighter0987">fighter0987</a> | <a href="/t/technology">/t/technology</a></span>
+                    <span class="font-weight-light text-truncate">2 hours ago | by <a href="/u/sagen">sagen</a> | <a href="/t/idiotsfightstuff">/t/idiotsfightstuff</a></span>
                     <hr class="my-1" style="border-color: #666;">
-                    <span class="font-weight-bold">Robots can now outrun even the fastest athletes</span>
+                    <span class="font-weight-bold text-truncate">Stupid people fight trashcan</span>
+                </div>
+            </div>
+
+            <div class="row my-1 px-0 post d-flex flex-nowrap">
+                <div class="mx-0 pl-1 px-0 text-center" style="width: 40px;">
+                    <span class="font-weight-bold" style="color: green;">234</span>
+                    <hr class="my-1" style="border-color: #666;">
+                    <span class="font-weight-bold" style="color: red;">96</span>
+                </div>
+                <div class="flex-grow-1 mx-0 px-2">
+                    <span class="font-weight-light text-truncate">2 hours ago | by <a href="/u/fighter0987">fighter0987</a> | <a href="/t/technology">/t/technology</a></span>
+                    <hr class="my-1" style="border-color: #666;">
+                    <span class="font-weight-bold text-truncate">Robots can now outrun even the fastest athletes</span>
+                </div>
+            </div>
+
+            <div class="row my-1 px-0 post d-flex flex-nowrap">
+                <div class="mx-0 pl-1 px-0 text-center" style="width: 40px;">
+                    <span class="font-weight-bold" style="color: green;">198</span>
+                    <hr class="my-1" style="border-color: #666;">
+                    <span class="font-weight-bold" style="color: red;">12</span>
+                </div>
+                <div class="flex-grow-1 mx-0 px-2">
+                    <span class="font-weight-light text-truncate">2 hours ago | by <a href="/u/sagen">sagen</a> | <a href="/t/idiotsfightstuff">/t/idiotsfightstuff</a></span>
+                    <hr class="my-1" style="border-color: #666;">
+                    <span class="font-weight-bold text-truncate">Stupid people fight trashcan</span>
+                </div>
+            </div>
+
+            <div class="row my-1 px-0 post d-flex flex-nowrap">
+                <div class="mx-0 pl-1 px-0 text-center" style="width: 40px;">
+                    <span class="font-weight-bold" style="color: green;">234</span>
+                    <hr class="my-1" style="border-color: #666;">
+                    <span class="font-weight-bold" style="color: red;">96</span>
+                </div>
+                <div class="flex-grow-1 mx-0 px-2">
+                    <span class="font-weight-light text-truncate">2 hours ago | by <a href="/u/fighter0987">fighter0987</a> | <a href="/t/technology">/t/technology</a></span>
+                    <hr class="my-1" style="border-color: #666;">
+                    <span class="font-weight-bold text-truncate">Robots can now outrun even the fastest athletes</span>
                 </div>
             </div>
 
