--- a/tidder-front/src/main/resources/templates/topic.html
+++ b/tidder-front/src/main/resources/templates/topic.html
@@ -224,16 +224,15 @@
 
         <div class="col-lg-3 col-md-4">
             <div class="row">
-                <div class="my-1 mx-3 px-4 py-3 col-12 userColumnContainer">
+                <div class="my-1 mx-md-3 px-4 py-3 col-12 userColumnContainer">
                     <h4 class="text-align-center">Your profile</h4>
-                    <h6 class="ml-0">/t/thingsfightidiots</h6>
-                    <h6 class="ml-0">/t/thingsfightidiots</h6>
-                    <h6 class="ml-0">/t/thingsfightidiots</h6>
-                    <h6 class="ml-0">/t/thingsfightidiots</h6>
+                    <h6 class="ml-0">Created: 105 days ago</h6>
+                    <h6 class="ml-0">Username: sagen</h6>
+                    <h6 class="ml-0">Points: 10 579</h6>
                 </div>
             </div>
             <div class="row">
-                <div class="my-1 mx-3 px-4 py-3 col-12 userColumnContainer">
+                <div class="my-1 mx-md-3 px-4 py-3 col-12 userColumnContainer">
                     <h4 class="text-align-center">Top 10 topics</h4>
                     <h6 class="ml-0">/t/thingsfightidiots</h6>
                     <h6 class="ml-0">/t/thingsfightidiots</h6>
@@ -247,7 +246,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="my-1 mx-3 px-4 py-3 col-12 userColumnContainer">
+                <div class="my-1 mx-md-3 px-4 py-3 col-12 userColumnContainer">
                     <h4 class="text-align-center">Discover</h4>
                     <h6 class="ml-0">/t/thingsfightidiots</h6>
                     <h6 class="ml-0">/t/thingsfightidiots</h6>
