--- a/tidder-front/src/main/resources/templates/topic.html
+++ b/tidder-front/src/main/resources/templates/topic.html
@@ -44,11 +44,11 @@
         </div>
 
         <div class="col-lg-3 col-md-4">
-            <div class="row">
+            <div th:if="currentUser!=null" class="row">
                 <div class="my-1 mx-md-3 px-4 py-3 col-12 userColumnContainer">
                     <h4 class="text-align-center">Your profile</h4>
-                    <h6 class="ml-0">Created: 105 days ago</h6>
-                    <h6 class="ml-0">Username: sagen</h6>
+                    <h6 class="ml-0">Created: 2 days ago</h6>
+                    <h6 class="ml-0" th:text="'Username: '+${currentUser.getUsername()}"></h6>
                     <h6 class="ml-0">Points: 10 579</h6>
                 </div>
             </div>
