--- a/tidder-front/src/main/resources/templates/topic.html
+++ b/tidder-front/src/main/resources/templates/topic.html
@@ -28,7 +28,7 @@
 
             <th:block th:each="post : ${posts}">
             <div class="row my-1 px-0 post d-flex flex-nowrap">
-                <div class="mx-0 pl-1 px-0 text-center" style="width: 40px;">
+                <div class="mx-0 pl-1 px-0 text-center" style="width: 40px !important;">
                     <span class="font-weight-bold" style="color: green;">198</span>
                     <hr class="my-1" style="border-color: #666;">
                     <span class="font-weight-bold" style="color: red;">12</span>
@@ -48,7 +48,7 @@
                 <div class="my-1 mx-md-3 px-4 py-3 col-12 userColumnContainer">
                     <h4 class="text-align-center">Your profile</h4>
                     <h6 class="ml-0">Created: 2 days ago</h6>
-                    <h6 class="ml-0" th:text="'Username: '+${currentUser.getUsername()}"></h6>
+                    <h6 class="ml-0" th:text="'Username: '+${'sagen'}"></h6>
                     <h6 class="ml-0">Points: 10 579</h6>
                 </div>
             </div>
@@ -106,7 +106,7 @@
                                 <label>Topic Title</label>
                                 <input class="form-control" id="topicTitle" type="text" placeholder="Topic Title" required="required">
                             </div>
-                        </div>
+                    </div>
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>Description of the topic and its rules</label>
