--- a/tidder-front/src/main/resources/templates/topic.html
+++ b/tidder-front/src/main/resources/templates/topic.html
@@ -22,7 +22,7 @@
 </header>
 
 <!-- Posts -->
-<section id="postSection" class="container my-0 py-0 mt-3">
+<section th:if="${topic != null}" id="postSection" class="container my-0 py-0 mt-3">
     <div class="row">
         <div id="postContainer" class="col-lg-9 col-md-8">
 
@@ -85,7 +85,8 @@
     </div>
 </section>
 
-<section th:if="false" id="form3plus1">
+<!-- Claim topic form -->
+<section th:if="${topic == null}" id="form3plus1">
     <div class="container">
         <div class="row">
             <div class="col-md-6 offset-md-3 text-center">
