Fixed topicName in topic.html

--- a/tidder-front/src/main/resources/templates/topic.html
+++ b/tidder-front/src/main/resources/templates/topic.html
@@ -100,7 +100,7 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>Topic Name</label>
-                                <input class="form-control" id="topic" type="text" th:value="${topic.getName()}" disabled="disabled" required="required">
+                                <input class="form-control" id="topic" type="text" th:value="${topicName}" disabled="disabled" required="required">
                             </div>
                             <div class="form-group">
                                 <label>Topic Title</label>
