--- a/tidder-front/src/main/resources/templates/topic.html
+++ b/tidder-front/src/main/resources/templates/topic.html
@@ -95,22 +95,22 @@
         </div>
         <div class="row">
             <div class="col-md-8 offset-md-2">
-                <form id="claimtopicform" name="claimtopic" action="#" method="post">
+                <form id="claimtopicform" name="claimtopic" th:action="@{/createTopic}" method="post">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>Topic Name</label>
-                                <input class="form-control" id="topic" type="text" th:value="${topicName}" disabled="disabled" required="required">
+                                <input class="form-control" name="name" type="text" th:value="${topicName}" disabled="disabled" required="required">
                             </div>
-                            <div class="form-group">
+                            <!--<div class="form-group">
                                 <label>Topic Title</label>
                                 <input class="form-control" id="topicTitle" type="text" placeholder="Topic Title" required="required">
-                            </div>
-                    </div>
+                            </div>-->
+                        </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label>Description of the topic and its rules</label>
-                                <textarea class="form-control" id="topicMessage" placeholder="Describe your topic and the rules..." required="required"></textarea>
+                                <label>Topic title and description</label>
+                                <textarea class="form-control" name="title"  placeholder="Describe your topic and the rules..." required="required" maxlength="255"></textarea>
                             </div>
                         </div>
                         <div class="clearfix"></div>
