Fixed form again

--- a/tidder-front/src/main/resources/templates/topic.html
+++ b/tidder-front/src/main/resources/templates/topic.html
@@ -95,7 +95,7 @@
         </div>
         <div class="row">
             <div class="col-md-8 offset-md-2">
-                <form id="claimtopicform" name="claimtopic" th:action="@{/createTopic}" method="post">
+                <form id="claimtopicform" name="/t/claimtopic" th:action="@{/createTopic}" method="post">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
