--- a/tidder-front/src/main/resources/templates/fragments/layout.html
+++ b/tidder-front/src/main/resources/templates/fragments/layout.html
@@ -68,6 +68,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown-user">
                         <a class="dropdown-item" href="/home">Your profile</a>
+                        <a class="dropdown-item" href="/t/newPost">New post</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="/logout">Log out</a>
                     </div>
